chore: Updating JSpecify coverage (#534)
Adding more JSpecify coverage

Signed-off-by: Emmanuel Hugonnet <ehugonne@redhat.com>